# Visage

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
engine/: CMakeLists.txt  main.cpp
engine/shaders/includes/: helper.glsl  light.glsl  lightingcalc.glsl  loadtextures.glsl  meshdata.glsl  random.glsl  raypayloads.glsl  texindices.glsl
engine/shaders/pathtracing/: anyhit.rahit  closehit.rchit  gen.rgen  miss.rmiss  present.frag  present.vert  shadowanyhit.rahit  shadowhit.rchit  shadowmiss.rmiss
engine/shaders/rasterization/: composition.frag  composition.vert  deferred.frag  deferred.vert  lighting.frag  lighting.vert  shadow.frag  shadow.vert  sky.frag  sky.vert  wboit.frag  wboit.vert
engine/src/: config.hpp  mouse.hpp  visage.cpp  visage.hpp
engine/src/internal/: vk-buffers.cpp  vk-buffers.hpp  vk-descriptorsets.cpp  vk-descriptorsets.hpp  vk-pipelines.cpp  vk-pipelines.hpp  vk-raytracing.cpp  vk-raytracing.hpp  vk-renderer.cpp  vk-renderer.hpp  vk-scene.cpp  vk-scene.hpp  vk-setup.cpp  vk-setup.hpp  vk-swapchain.cpp  vk-swapchain.hpp  vk-textures.cpp  vk-textures.hpp
engine/src/internal/structures/: cam.hpp  commandbuffers.hpp  core.hpp  descriptorsets.hpp  instancing.hpp  light.hpp  pipeline.hpp  pushconstants.hpp  raytracing.hpp  texindices.hpp
engine/src/libraries/: dml.hpp  dvl.cpp  dvl.hpp  utils.hpp  vkhelper.cpp  vkhelper.hpp
